--- a/resources/js/components/global.scss
+++ b/resources/js/components/global.scss
@@ -4,8 +4,11 @@ $blue: #9fd1de;
 
 @import url('https://fonts.googleapis.com/css?family=Coiny');
 
-body{
+*{
   font-family: 'Coiny', cursive;
+}
+
+body{
   margin: 0;
   padding: 0;
 }
